Uploading possible .progress-bar2 overflow fix

--- a/space.css
+++ b/space.css
@@ -7,11 +7,57 @@
 	margin-bottom: 5px !important;
 	top: 0 !important;
 	bottom: 0 !important;
+	left: 0.5em;
 	height: auto !important;
+	background: transparent !important;
+	box-shadow: none !important;
+}
+
+.progress-bar2.orange span::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #fecf23;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#fecf23),to(#fd9215));
+    background-image: -webkit-linear-gradient(top,#fecf23,#fd9215);
+    background-image: -moz-linear-gradient(top,#fecf23,#fd9215);
+    background-image: -ms-linear-gradient(top,#fecf23,#fd9215);
+    background-image: -o-linear-gradient(top,#fecf23,#fd9215);
+    background-image: linear-gradient(top,#fecf23,#fd9215);
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    -moz-box-shadow: 0 1px 0 rgba(255,255,255,.5) inset;
+    -webkit-box-shadow: 0 1px 0 rgba(255,255,255,.5) inset;
+    box-shadow: 0 1px 0 rgba(255,255,255,.5) inset;
+    -webkit-transition: width .4s ease-in-out;
+    -moz-transition: width .4s ease-in-out;
+    -ms-transition: width .4s ease-in-out;
+    -o-transition: width .4s ease-in-out;
+    transition: width .4s ease-in-out;
+}
+
+.progress-bar2.orange::after {
+    content: "";
+    -webkit-box-shadow: 0 1px 5px #000 inset,0 1px 0 #444;
+    box-shadow: 0 1px 5px #000 inset,0 1px 0 #444;
+    position: absolute;
+    left: 0;
+    right: -1em;
+    top: 0;
+    bottom: 0;
+    border-radius: 3px;
 }
 
 .progress-bar2 {
+	border-right: 1em solid transparent;
 	height: auto !important;
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
 }
 
 .progress-bar2 div {
